@@ -39,6 +39,7 @@ Cacti CHANGELOG
 -feature: Support changing the "Reindex Method" of associated data queries
 -feature: Manage all Host Availability Options in each Host Template, derive Host options from those
 -feature: Add Server Time to page headers, pay respect to user specific date/timeformats
+-feature: add_device.php uses a host template like feature#0001122
 
 0.8.7a
 -bug#0000895: "Use Per-Data Source Value (Ignore this Value)" runs only when when checking "Allow Empty Input"
